source/formulaforce/main/objects/Driver__c/fields/Driver_Code__c.field-meta.xml
<CustomField>
    <fullName>Driver_Code__c</fullName>
    <label>Driver Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>