source/formulaforce/main/objects/Driver__c/fields/DriverId__c.field-meta.xml
<CustomField>
    <fullName>DriverId__c</fullName>
    <label>Driver Id</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>