source/formulaforce/main/objects/Driver__c/fields/FIA_Super_License__c.field-meta.xml
<CustomField>
    <fullName>FIA_Super_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>deprecated - DO NOT USE</description>
    <label>FIA Super License (deprecated)</label>
    <type>Checkbox</type>
</CustomField>