source/formulaforce/main/objects/Driver__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <label>Short Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>