source/formulaforce/main/objects/Driver__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>deprecated - DO NOT USE</description>
    <label>Team (deprecated)</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>