source/formulaforce/main/objects/Driver__c/fields/TwitterHandle__c.field-meta.xml
<CustomField>
    <fullName>TwitterHandle__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <label>Twitter Handle (deprecated)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>